# cjkfuzz

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: develop.yml  document.yml  documentation.yml  pull-request.yml  python-package.yml  release.yml
cjkfuzz/: __init__.py  fuzz.py  hamming.py  jaccard.py  jaro.py  jaro_winkler.py  levenshtein.py  match.py  process.py  tokenizer.py  utils.py
docs/: Installation.rst  cjkfuzz.fuzz.rst  cjkfuzz.hamming.rst  cjkfuzz.jaccard.rst  cjkfuzz.jaro.rst  cjkfuzz.jaro_winkler.rst  cjkfuzz.levenshtein.rst  cjkfuzz.match.rst  cjkfuzz.process.rst  cjkfuzz.rst  cjkfuzz.tokenizer.rst  cjkfuzz.utils.rst  conf.py  index.rst  modules.rst
tests/: test_fuzz.py  test_hamming.py  test_jaccard.py  test_jaro.py  test_jaro_winkler.py  test_levenshtein.py  test_match.py  test_process.py  test_tokenizer.py
