[tool.poetry]
name = "cjkfuzz"
version = "0.0.1"
description = "A Python package for fuzzy matching CJK strings."
authors = ["Eddie Lin <eddielin0926@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.0.286"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
